# magnum_hunter

./: .gitignore  .gitmodules  .travis.yml  Readme.md  TLDR_hunter.py  TODO.md  appveyor.yml  travis-disabled.yml
Docker/ubuntu/: Dockerfile  docker_build_corrrade.sh  docker_create_image.sh  docker_login.sh
_scripts/: build_magnum_example_with_hunter.sh  build_magnum_with_hunter.sh  hunter_TLDR.py  hunter_manage_release.py  hunter_test_build.sh  prepare_submodules.sh
helloworld/: CMakeLists.txt
magnum_example_app/: CMakeLists.txt  Readme.md
magnum_example_app/cmake/Hunter/: config.cmake
magnum_example_app_with_submodules/: CMakeLists.txt  PrimitivesExample.cpp  Readme.md
magnum_example_app_with_submodules/cmake/Hunter/: config.cmake
